# zrouter

./: .gitignore  CLAUDE.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  build.rs  config.example.toml  error-codes.example.toml
contrib/: zrouter.service
docs/: anthropic-endpoints-research.md  api-error-codes.md  api-research.md
src/: auth.rs  config.rs  debug.rs  error_map.rs  fallback.rs  logging.rs  main.rs  probe.rs  provider.rs  proxy.rs  router.rs  server.rs  tls.rs
