[package]
name = "zrouter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "webpki-tokio", "http1", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
http-body-util = "0.1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true

[lints.rust]
warnings = "deny"
